k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
  namespace: cicd-demo
  labels:
    app: demo-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3111
    protocol: TCP
    name: http
  selector:
    app: demo-app
